language/move-lang/tests/move_check/typing/binary_and_invalid.exp
error: 

   ┌── tests/move_check/typing/binary_and_invalid.move:8:9 ───
   │
 8 │         0 && 1;
   │         - The type: integer
   │         - Is not compatible with: 'bool'
   │         ^ Incompatible arguments to '&&'
   │

error: 

   ┌── tests/move_check/typing/binary_and_invalid.move:8:9 ───
   │
 8 │         0 && 1;
   │         - Is not compatible with: 'bool'
   │              - The type: integer
   │              ^ Incompatible arguments to '&&'
   │

error: 

   ┌── tests/move_check/typing/binary_and_invalid.move:9:9 ───
   │
 9 │         1 && false;
   │         - The type: integer
   │         - Is not compatible with: 'bool'
   │         ^ Incompatible arguments to '&&'
   │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:10:9 ───
    │
 10 │         false && 1;
    │         ----- Is not compatible with: 'bool'
    │                  - The type: integer
    │                  ^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:11:9 ───
    │
 11 │         0x0 && 0x1;
    │         --- The type: 'address'
    │         --- Is not compatible with: 'bool'
    │         ^^^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:11:9 ───
    │
 11 │         0x0 && 0x1;
    │         --- Is not compatible with: 'bool'
    │                --- The type: 'address'
    │                ^^^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:12:9 ───
    │
 12 │         (0: u8) && (1: u128);
    │         ------- Is not compatible with: 'bool'
    │         ^^^^^^^ Incompatible arguments to '&&'
    │             -- The type: 'u8'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:12:9 ───
    │
 12 │         (0: u8) && (1: u128);
    │         ------- Is not compatible with: 'bool'
    │                    ^^^^^^^^^ Incompatible arguments to '&&'
    │                        ---- The type: 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:7:23 ───
    │
  7 │     fun t0(x: u64, r: R, s: S) {
    │                       - The type: '0x8675309::M::R'
    ·
 13 │         r && r;
    │         - Is not compatible with: 'bool'
    │         ^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:7:23 ───
    │
  7 │     fun t0(x: u64, r: R, s: S) {
    │                       - The type: '0x8675309::M::R'
    ·
 13 │         r && r;
    │         - Is not compatible with: 'bool'
    │              ^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:7:29 ───
    │
  7 │     fun t0(x: u64, r: R, s: S) {
    │                             - The type: '0x8675309::M::S'
    ·
 14 │         s && s;
    │         - Is not compatible with: 'bool'
    │         ^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:7:29 ───
    │
  7 │     fun t0(x: u64, r: R, s: S) {
    │                             - The type: '0x8675309::M::S'
    ·
 14 │         s && s;
    │         - Is not compatible with: 'bool'
    │              ^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:15:9 ───
    │
 15 │         () && ();
    │         -- The type: '()'
    │         -- Is not compatible with: 'bool'
    │         ^^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:15:9 ───
    │
 15 │         () && ();
    │         -- Is not compatible with: 'bool'
    │               -- The type: '()'
    │               ^^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:16:9 ───
    │
 16 │         true && ();
    │         ---- Is not compatible with: 'bool'
    │                 -- The type: '()'
    │                 ^^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:17:9 ───
    │
 17 │         (true, false) && (true, false, true);
    │         ------------- The type: '(bool, bool)'
    │         ------------- Is not compatible with: 'bool'
    │         ^^^^^^^^^^^^^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:17:9 ───
    │
 17 │         (true, false) && (true, false, true);
    │         ------------- Is not compatible with: 'bool'
    │                          ------------------- The type: '(bool, bool, bool)'
    │                          ^^^^^^^^^^^^^^^^^^^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:18:9 ───
    │
 18 │         (true, true) && (false, false);
    │         ------------ The type: '(bool, bool)'
    │         ------------ Is not compatible with: 'bool'
    │         ^^^^^^^^^^^^ Incompatible arguments to '&&'
    │

error: 

    ┌── tests/move_check/typing/binary_and_invalid.move:18:9 ───
    │
 18 │         (true, true) && (false, false);
    │         ------------ Is not compatible with: 'bool'
    │                         -------------- The type: '(bool, bool)'
    │                         ^^^^^^^^^^^^^^ Incompatible arguments to '&&'
    │

